--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeaBattle">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.welcome.AuthActivity"
             android:exported="false"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.SeaBattle" />
