--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SeaBattle">
+        android:theme="@style/Theme.SeaBattle"
+        android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
