--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,27 @@
 [versions]
-agp = "8.10.0"
+agp = "8.10.1"
 coilCompose = "2.2.0"
-credentials = "1.3.0"
-firebaseBom = "33.11.0"
+credentials = "1.5.0"
+firebaseBom = "33.15.0"
 googleid = "1.1.1"
 koinAndroid = "3.4.0"
 koinAndroidxCompose = "3.4.0"
-kotlin = "2.0.0"
-coreKtx = "1.15.0"
+kotlin = "2.0.21"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
+lifecycleRuntimeKtx = "2.9.1"
 activityCompose = "1.10.1"
-composeBom = "2024.04.01"
-appcompat = "1.7.0"
+composeBom = "2025.06.01"
+appcompat = "1.7.1"
 material = "1.12.0"
 activity = "1.10.1"
-navigationCompose = "2.8.9"
-securityCrypto = "1.1.0-alpha06"
-annotation = "1.6.0"
-lifecycleLivedataKtx = "2.8.7"
-lifecycleViewmodelKtx = "2.8.7"
+navigationCompose = "2.9.0"
+securityCrypto = "1.1.0-beta01"
+annotation = "1.9.1"
+lifecycleLivedataKtx = "2.9.1"
+lifecycleViewmodelKtx = "2.9.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
