--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SeaBattle"
-        android:enableOnBackInvokedCallback="true">
+        android:theme="@style/Theme.SeaBattle">
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
